fix spacing between paragraphs

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,6 +39,9 @@ small {font-size: 16px;}
     list-style-type: disc;
     margin: 1em;
   }
+  p{
+    margin-top: 24px;
+  }
   ol {
     list-style: decimal;
     margin: 1em;
